little changes in MVC

--- a/Garage2.5/Views/Shared/_Layout.cshtml
+++ b/Garage2.5/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Medlemmar", "Index", "Medlems")</li>
+                    <li>@Html.ActionLink("Fordons", "Index", "Fordons")</li>
+                    <li>@Html.ActionLink("Fordonstyp", "Index", "Fordonstyps")</li>
                 </ul>
             </div>
         </div>
